--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datahub-nodejs-sdk",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "DataHub Node.js SDK",
   "keywords": [
     "datahub",
@@ -23,12 +23,12 @@
     "eslint": "*",
     "eslint-plugin-mocha": "^4.11.0",
     "mocha": "*",
-    "should": "*",
     "istanbul": "*",
     "pre-commit": "*"
   },
   "scripts": {
-    "test": "mocha",
+    "ci": "npm run lint && npm run test",
+    "test": "istanbul cover `npm bin`/_mocha",
     "lint": "eslint . --fix"
   },
   "pre-commit": [
