--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ script:
   - npm i
   - npm run ci
 after_script:
-  - npm install coveralls@2 && cat ./coverage/lcov.info | coveralls
+  - npm install coveralls@2 && npx nyc report --reporter=text-lcov | coveralls
