--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint": "4",
     "eslint-config-antife": "^1.0.0",
     "eslint-plugin-mocha": "4",
+    "jsdoc": "^3.5.5",
+    "minami": "^1.1.1",
     "mocha": "4",
     "nyc": "^11.4.1",
     "pre-commit": "*",
@@ -29,8 +31,11 @@
   },
   "scripts": {
     "ci": "npm run lint && npm run test",
-    "test": "nyc --reporter=text-summary --reporter=html `npm bin`/_mocha",
-    "lint": "eslint index.js lib bin test --fix"
+    "test": "npm run clean:test && nyc --reporter=text-summary --reporter=html `npm bin`/_mocha",
+    "lint": "eslint index.js lib bin test --fix",
+    "clean:test": "rm -rf ./coverage",
+    "clean:doc": "rm -rf ./docs",
+    "doc": "npm run clean:doc && jsdoc -c ./jsdoc.json"
   },
   "pre-commit": [
     "lint"
