--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datahub-nodejs-sdk",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "DataHub Node.js SDK",
   "keywords": [
     "datahub",
@@ -15,8 +15,7 @@
     "url": "git://github.com/macacajs/datahub-nodejs-sdk.git"
   },
   "dependencies": {
-    "isomorphic-fetch": "2",
-    "xutil": "1"
+    "isomorphic-fetch": "2"
   },
   "devDependencies": {
     "eslint": "4",
