--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
-language: node_js
 sudo: false
+language: node_js
 node_js:
-  - 8
+  - '8'
 script:
-  - npm i
   - npm run ci
 after_script:
-  - npm install coveralls@2 && npx nyc report --reporter=text-lcov | coveralls
+  - npm i codecov && codecov
